add agg default example.

--- a/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldmsd.agg.conf
+++ b/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldmsd.agg.conf
@@ -5,7 +5,7 @@ LDMS_AUTH_TYPE=ovis
 # Variables overriding defaults
 # See man ldmsd-genders(8) for details.
 # LDMSCLUSTER=remotename
-# LDMS_GENDERS="/etc/sysconfig/ldms.d/ClusterGenders/genders.local"
+# LDMS_GENDERS="/etc/sysconfig/ldms.d/ClusterGenders/genders.agg"
 # LDMS_LOG_PATH=/path/file
 # LDMSAGGD_MEM_RES=
 # LDMSD_EVENT_THDS=
@@ -18,7 +18,7 @@ LDMS_AUTH_TYPE=ovis
 # VERBOSE=-v
 
 # Variables overriding attribute-derived values read with libgenders
-# LDMSD_PORT=
+#LDMSD_PORT=412
 # LDMSD_XPRT=
 # LDMSD_HOST=
 # LDMSD_DBG=
