ldms_auth_munge manpage

--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -12,6 +12,7 @@ ldmsctl.man
 dist_man7_MANS= \
 ldms_authentication.man \
 ldms_auth_ovis.man \
+ldms_auth_munge.man \
 ldms_auth_naive.man \
 ldms_quickstart.man \
 ldms_sampler_base.man \
