fix allowroot check and link target for rpm case

--- a/ldms/scripts/ldms-static-test.sh.in
+++ b/ldms/scripts/ldms-static-test.sh.in
@@ -136,7 +136,11 @@ function LDMSD {
 		binname=ldmsd.${ports[$i]}
 		pkill -9 $binname
 		/bin/rm -f $LDMSD_RUN/$binname
-		ln -s ${BUILDDIR}/sbin/ldmsd $LDMSD_RUN/$binname
+		if test -f $pkglibdir/ldmsd; then
+			ln -s $pkglibdir/ldmsd $LDMSD_RUN/$binname
+		else
+			ln -s ${BUILDDIR}/sbin/ldmsd $LDMSD_RUN/$binname
+		fi
 	done
 	for i in $*; do
 		export i
@@ -289,6 +293,7 @@ if test ! -x $BUILDDIR/sbin/ldmsd; then
 	echo "can't find ldmsd binary. set destdir in $0 before testing?"
 	exit 1
 fi
+if test "$allowroot" = "0"; then
 case "x$USER" in
 	x)
 	echo "must be run in user environment. USER not set"
@@ -301,6 +306,7 @@ case "x$USER" in
 	exit 1
 	;;
 esac
+fi
 
 # use our pid in dirname to prevent collisions in dir & file naming
 export STOREDIR=$TESTDIR/store
