--- a/ldms/scripts/ldms-static-test.sh.in
+++ b/ldms/scripts/ldms-static-test.sh.in
@@ -116,8 +116,6 @@ function LDMSD {
 				file=""
 				bug=2
 				((OPTIND--))
-			else
-				prologs="$prologs $file"
 			fi
 			;;
 		\?)
@@ -138,7 +136,11 @@ function LDMSD {
 		binname=ldmsd.${ports[$i]}
 		pkill -9 $binname
 		/bin/rm -f $LDMSD_RUN/$binname
-		ln -s ${BUILDDIR}/sbin/ldmsd $LDMSD_RUN/$binname
+		if test -f $pkglibdir/ldmsd; then
+			ln -s $pkglibdir/ldmsd $LDMSD_RUN/$binname
+		else
+			ln -s ${BUILDDIR}/sbin/ldmsd $LDMSD_RUN/$binname
+		fi
 	done
 	for i in $*; do
 		export i
@@ -193,7 +195,6 @@ function MESSAGE  {
 	if test "$bypass" = "1"; then
 		return 0
 	fi
-	shift
 	echo $*
 }
 
@@ -296,6 +297,7 @@ if test ! -x $BUILDDIR/sbin/ldmsd; then
 	echo "can't find ldmsd binary. set destdir in $0 before testing?"
 	exit 1
 fi
+if test "$allowroot" = "0"; then
 case "x$USER" in
 	x)
 	echo "must be run in user environment. USER not set"
@@ -308,6 +310,7 @@ case "x$USER" in
 	exit 1
 	;;
 esac
+fi
 
 # use our pid in dirname to prevent collisions in dir & file naming
 export STOREDIR=$TESTDIR/store
