add dstat sampler to watch the daemon

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -477,6 +477,7 @@ OVIS_EXEC_SCRIPTS(
 AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile
 		 swig/Makefile
 		 src/store/Makefile src/sampler/Makefile
+		 src/sampler/dstat/Makefile
 		 src/sampler/lustre/Makefile
 		 src/sampler/llnl/Makefile
 		 src/sampler/hadoop/Makefile
