--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -211,6 +211,9 @@ libprocstat_la_SOURCES = procstat.c
 libprocstat_la_LIBADD = $(COMMON_LIBADD) $(JOBID_LIBFLAGS)
 libprocstat_la_CFLAGS = -I$(builddir) $(AM_CFLAGS)
 pkglib_LTLIBRARIES += libprocstat.la
+
+SUBDIRS += dstat
+
 endif
 
 
