extend lustre2_client to include componentid,jobid
This does not affect lustre library shared with cray plugins.

--- a/ldms/src/sampler/lustre/Makefile.am
+++ b/ldms/src/sampler/lustre/Makefile.am
@@ -1,12 +1,18 @@
 pkglib_LTLIBRARIES =
 
 CORE = ../../core
-AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) -I../.. @OVIS_LIB_INCDIR_FLAG@
+SAMPLER= ../../sampler
+AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) -I../.. @OVIS_LIB_INCDIR_FLAG@ -I$(srcdir)/$(SAMPLER)
 AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
 
 # libstr_map
 # libstr_map_la_SOURCES = str_map.c str_map.h fnv_hash.h
 # lib_LTLIBRARIES += libstr_map.la
+
+if ENABLE_JOBID
+AM_CFLAGS += -DENABLE_JOBID
+JOBID_LIBFLAGS = ../libjobid.la
+endif
 
 #liblustre_sampler
 liblustre_sampler_la_SOURCES = lustre_sampler.c lustre_sampler.h
@@ -30,5 +36,5 @@ pkglib_LTLIBRARIES += liblustre2_oss.la
 
 #liblustre2_client
 liblustre2_client_la_SOURCES = lustre2_client.c
-liblustre2_client_la_LIBADD = $(COMMON_LIBADD)
+liblustre2_client_la_LIBADD = $(COMMON_LIBADD) $(JOBID_LIBFLAGS)
 pkglib_LTLIBRARIES += liblustre2_client.la
