added lost changes to dstat.h and build.
This has been tested with --disable-dstat, --enable-dstat, and make
distcheck.

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -98,6 +98,7 @@ OPTION_DEFAULT_ENABLE([procinterrupts], [ENABLE_PROCINTERRUPTS])
 OPTION_DEFAULT_ENABLE([procnetdev], [ENABLE_PROCNETDEV])
 OPTION_DEFAULT_ENABLE([procnfs], [ENABLE_PROCNFS])
 OPTION_DEFAULT_ENABLE([procsensors], [ENABLE_PROCSENSORS])
+OPTION_DEFAULT_ENABLE([dstat], [ENABLE_DSTAT])
 OPTION_DEFAULT_ENABLE([procstat], [ENABLE_PROCSTAT])
 OPTION_DEFAULT_ENABLE([llnl-edac], [ENABLE_LLNL_EDAC])
 AM_CONDITIONAL([ENABLE_LLNL], [test "x$ENABLE_LLNL_EDAC_FALSE" = "x#"])
