--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -211,11 +211,11 @@ libprocstat_la_SOURCES = procstat.c
 libprocstat_la_LIBADD = $(COMMON_LIBADD) $(JOBID_LIBFLAGS)
 libprocstat_la_CFLAGS = -I$(builddir) $(AM_CFLAGS)
 pkglib_LTLIBRARIES += libprocstat.la
-
-SUBDIRS += dstat
-
 endif
 
+if ENABLE_DSTAT
+SUBDIRS += dstat
+endif
 
 if ENABLE_SYSCLASSIB
 libsysclassib_la_SOURCES = sysclassib.c
