--- a/ldms/src/sampler/dstat/Makefile.am
+++ b/ldms/src/sampler/dstat/Makefile.am
@@ -1,5 +1,5 @@
 pkglib_LTLIBRARIES =
-lib_LTLIBRARIES = libparse_stat.la
+lib_LTLIBRARIES =
 check_PROGRAMS =
 dist_man7_MANS =
 
@@ -7,8 +7,6 @@ CORE = ../../core
 SAMPLER= ../../sampler
 AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) -I../.. @OVIS_LIB_INCDIR_FLAG@
 AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
-
-libparse_stat_la_SOURCES = parse_stat.c parse_stat.h
 
 if ENABLE_JOBID
 JOBID_LIBFLAGS = ../libjobid.la
@@ -19,14 +17,17 @@ COMMON_LIBADD = $(CORE)/libldms.la libparse_stat.la \
 	@LDFLAGS_GETTIME@ -lovis_util -lcoll \
 	$(JOBID_LIBFLAGS)
 
-if ENABLE_PROCSTAT
-libdstat_la_SOURCES = dstat.c dstat.h
+if ENABLE_DSTAT
+lib_LTLIBRARIES += libparse_stat.la
+libparse_stat_la_SOURCES = parse_stat.c parse_stat.h
+
+libdstat_la_SOURCES = dstat.c
 libdstat_la_LIBADD = $(COMMON_LIBADD)
 libdstat_la_CFLAGS = $(AM_CFLAGS) -I$(srcdir)/$(SAMPLER)
 pkglib_LTLIBRARIES += libdstat.la
 dist_man7_MANS += Plugin_dstat.man
 
 check_PROGRAMS += parse_stat_test
-parse_stat_test_SOURCES: parse_stat.c parse_stat.h
+parse_stat_test_SOURCES = parse_stat.c parse_stat.h
 parse_stat_test_CFLAGS = -DMAIN
 endif
