ldms,test: Update test_ldms program to use the new LDMS authentication
Some nit fixes are included in the patch too.

--- a/ldms/src/test/Makefile.am
+++ b/ldms/src/test/Makefile.am
@@ -32,7 +32,7 @@ test_ldms_push_CFLAGS = $(AM_CFLAGS)
 sbin_PROGRAMS += test_ldms
 test_ldms_SOURCES = test_ldms.c
 test_ldms_LDADD = $(CORE)/libldms.la
-test_ldms_LDFLAGS = $(AM_LDFLAGS) -pthread
+test_ldms_LDFLAGS = $(AM_LDFLAGS) -pthread -lovis_util
 test_ldms_CFLAGS = $(AM_CFLAGS)
 
 sbin_PROGRAMS += test_ldms_set_info
