ldms: configure -- check SOS condition
Add a condition to check SOS library when `--enable-sos` or
`--enable-kokkos`.

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -136,17 +136,15 @@ OPTION_DEFAULT_ENABLE([ldmsd], [ENABLE_LDMSD])
 
 dnl check for Flex/Bison if Kokkos is enabled
 if test -z "$ENABLE_KOKKOS_TRUE"; then
-	if test -z "$ENABLE_SOS_TRUE"; then
-		AC_PROG_LEX
-		if test "x$LEX" != xflex; then
-			LEX="$SHELL $missing_dir/missing flex"
-			AC_SUBST([LEX_OUTPUT_ROOT], [lex.yy])
-			AC_SUBST([LEXLIB], [''])
-		fi
-		AC_PROG_YACC
-	else
-	    AC_MSG_ERROR([--enable-kokkos requires --enable-sos])
+	CHECK_SOS=1
+	dnl Kokkos sampler plugin requires Lex/Yacc
+	AC_PROG_LEX
+	if test "x$LEX" != xflex; then
+		LEX="$SHELL $missing_dir/missing flex"
+		AC_SUBST([LEX_OUTPUT_ROOT], [lex.yy])
+		AC_SUBST([LEXLIB], [''])
 	fi
+	AC_PROG_YACC
 fi
 
 dnl Other libraries
@@ -256,6 +254,10 @@ if test "x$WITH_OVIS_LIB" != "xbuild" && test -z "$ENABLE_TSAMPLER_TRUE"; then
 fi
 
 if test -z "$ENABLE_SOS_TRUE"; then
+	CHECK_SOS=1
+fi
+
+if test -n "$CHECK_SOS"; then
 	if test "x$WITH_SOS" != "xbuild"; then
 		OCFLAGS=$CFLAGS
 		CFLAGS=-I$SOS_INCDIR
@@ -265,7 +267,7 @@ if test -z "$ENABLE_SOS_TRUE"; then
 		)
 		AC_CHECK_LIB( sos, sos_container_open,
 			[],
-			AC_MSG_FAILURE(libsos not found),
+			AC_MSG_FAILURE(libsos not found: required by either --enable-sos or --enable-kokkos),
 			[ $SOS_LIB64DIR_FLAG $SOS_LIBDIR_FLAG ]
 		)
 		CFLAGS=$OCFLAGS
