--- a/ldms/etc/ldmsd.aggregator.env.in
+++ b/ldms/etc/ldmsd.aggregator.env.in
@@ -6,12 +6,11 @@ LDMSD_XPRT=sock
 # LDMS Daemon service port
 LDMSD_PORT=10000
 
-# LDMSD configuration port, for ldmsd_controller over the network. Configuration
-# transport always use 'socket', and is separated from the LDMS_XPRT.
-LDMSD_CONFIG_PORT=10100
+# Authentication method
+LDMSD_AUTH_PLUGIN=ovis
 
-# Authentication file path, see @sysconfdir@/ldms/ldmsauth.conf for an example
-LDMSD_AUTH_FILE=@sysconfdir@/ldms/ldmsauth.conf
+# Authentication options
+LDMSD_AUTH_OPTS="-A conf=@sysconfdir@/ldms/ldmsauth.conf"
 
 # LDMS plugin configuration file, see @sysconfdir@/ldms/ldmsplugin.aggregator.conf for an example
 LDMSD_PLUGIN_CONFIG_FILE=@sysconfdir@/ldms/ldmsplugin.aggregator.conf
