ldms: systemd and default agg conf update
- Add more option control in the systemd scripts
- Default (simple) aggregator configuration update -- to work with the
  default sampler configuration.

--- a/ldms/etc/ldmsd.aggregator.env.in
+++ b/ldms/etc/ldmsd.aggregator.env.in
@@ -6,11 +6,26 @@ LDMSD_XPRT=sock
 # LDMS Daemon service port
 LDMSD_PORT=10000
 
+# Daemon logging verbosity
+LDMSD_VERBOSE=ERROR
+
+# LDMS memory allocation
+LDMSD_MEM=2G
+
+# Number of event threads
+LDMSD_NUM_THREADS=4
+
+# The limit of number of open file descriptors
+LDMSD_ULIMIT_NOFILE=100000
+
 # Authentication method
 LDMSD_AUTH_PLUGIN=ovis
 
 # Authentication options
-LDMSD_AUTH_OPTS="-A conf=@sysconfdir@/ldms/ldmsauth.conf"
+LDMSD_AUTH_OPTION="-A conf=@sysconfdir@/ldms/ldmsauth.conf"
+
+# Log file control. The default is to log to syslog.
+# LDMSD_LOG_OPTION="-l /var/log/ldmsd.log"
 
 # LDMS plugin configuration file, see @sysconfdir@/ldms/ldmsplugin.aggregator.conf for an example
 LDMSD_PLUGIN_CONFIG_FILE=@sysconfdir@/ldms/ldmsplugin.aggregator.conf
