--- a/ldms/etc/ldmsplugin.aggregator.conf
+++ b/ldms/etc/ldmsplugin.aggregator.conf
@@ -3,14 +3,9 @@
 # Adding 1 producer per ldmsd.sampler, if you have thousands of nodes, feel free
 # to use a script to generate the configuration file. Producers take care only
 # the LDMS connection aspect. Updater will take care of the data updating logic.
-prdcr_add name=prd1 host=hostname_1 type=active xprt=${LDMSD_XPRT} port=10000 \
-	interval=20000
-prdcr_start name=prd1
-
-prdcr_add name=prd2 host=hostname_2 type=active xprt=${LDMSD_XPRT} port=10000 \
-	interval=20000
-prdcr_start name=prd2
-
+prdcr_add name=local host=localhost type=active xprt=${LDMSD_XPRT} port=10001 \
+	interval=2000000
+prdcr_start name=local
 
 # Create an updater for all producers and all sets.
 updtr_add name=update_all interval=2000000 offset=1000000
