--- a/ldms/etc/systemd/ldmsd.aggregator.service.in
+++ b/ldms/etc/systemd/ldmsd.aggregator.service.in
@@ -25,6 +25,7 @@ Documentation = http://ovis.ca.sandia.gov
 
 [Service]
 Type = forking
+LimitNOFILE = ${LDMSD_ULIMIT_NOFILE}
 EnvironmentFile = @sysconfdir@/ldms/ldmsd.aggregator.env
 Environment = HOSTNAME=%H
 ExecStartPre = /bin/mkdir -p @localstatedir@/run/ldmsd
@@ -32,7 +33,11 @@ ExecStart = @sbindir@/ldmsd \
 		-x ${LDMSD_XPRT}:${LDMSD_PORT} \
 		-c ${LDMSD_PLUGIN_CONFIG_FILE} \
 		-a ${LDMSD_AUTH_PLUGIN} \
-		$LDMSD_AUTH_OPTS \
+		$LDMSD_AUTH_OPTION \
+		-v ${LDMSD_VERBOSE} \
+		-m ${LDMSD_MEM} \
+		$LDMSD_LOG_OPTION \
+		-P ${LDMSD_NUM_THREADS} \
 		-r @localstatedir@/run/ldmsd/aggregator.pid
 
 [Install]
