--- a/ldms/etc/systemd/ldmsd.sampler.service.in
+++ b/ldms/etc/systemd/ldmsd.sampler.service.in
@@ -32,7 +32,10 @@ ExecStart = @sbindir@/ldmsd \
 		-x ${LDMSD_XPRT}:${LDMSD_PORT} \
 		-c ${LDMSD_PLUGIN_CONFIG_FILE} \
 		-a ${LDMSD_AUTH_PLUGIN} \
-		$LDMSD_AUTH_OPTS \
+		$LDMSD_AUTH_OPTION \
+		-v ${LDMSD_VERBOSE} \
+		-m ${LDMSD_MEM} \
+		$LDMSD_LOG_OPTION \
 		-r @localstatedir@/run/ldmsd/sampler.pid
 
 [Install]
