systemd cray_xc.example - quieter log level

--- a/ldms/etc/ldmsd.aggregator.env.cray_xc.example
+++ b/ldms/etc/ldmsd.aggregator.env.cray_xc.example
@@ -14,7 +14,7 @@ LDMSD_NUM_THREADS=4
 
 LDMSD_ULIMIT_NOFILE=100000
 
-LDMSD_VERBOSE=INFO
+LDMSD_VERBOSE=CRITICAL
 
 # Log file control. The default is to log to syslog.
 # LDMSD_LOG_OPTION="-l /var/log/ldmsd.log"
