--- a/ldms/etc/ldmsd.sampler.env.cray_xc.example
+++ b/ldms/etc/ldmsd.sampler.env.cray_xc.example
@@ -9,7 +9,7 @@ LDMSD_PORT=411
 # LDMS memory allocation
 LDMSD_MEM=512K
 
-LDMSD_VERBOSE=INFO
+LDMSD_VERBOSE=QUIET
 
 # Log file control. The default is to log to syslog.
 # LDMSD_LOG_OPTION="-l /var/log/ldmsd.log"
