conf file rename -- remove `ldmsplugin` prefix

--- a/ldms/etc/ldmsd.aggregator.env.cray_xc.example
+++ b/ldms/etc/ldmsd.aggregator.env.cray_xc.example
@@ -25,8 +25,7 @@ LDMSD_AUTH_PLUGIN=ovis
 # Authentication options
 LDMSD_AUTH_OPTION="-A conf=/opt/ovis/etc/ldms/ldmsauth.conf"
 
-# LDMS plugin configuration file, see /opt/ovis/etc/ldms/ldmsplugin.sampler.conf for an example
-LDMSD_PLUGIN_CONFIG_FILE=/opt/ovis/etc/ldms/ldmsplugin.aggregator.conf
+LDMSD_PLUGIN_CONFIG_FILE=/opt/ovis/etc/ldms/aggregator.conf
 
 # These are configured by configure script, no need to change.
 LDMSD_PLUGIN_LIBPATH=/opt/ovis/lib64/ovis-ldms
