--- a/ldms/etc/ldmsd.sampler.env.in
+++ b/ldms/etc/ldmsd.sampler.env.in
@@ -21,8 +21,8 @@ LDMSD_AUTH_PLUGIN=ovis
 # Authentication options
 LDMSD_AUTH_OPTION="-A conf=@sysconfdir@/ldms/ldmsauth.conf"
 
-# LDMS plugin configuration file, see @sysconfdir@/ldms/ldmsplugin.sampler.conf for an example
-LDMSD_PLUGIN_CONFIG_FILE=@sysconfdir@/ldms/ldmsplugin.sampler.conf
+# LDMS plugin configuration file, see @sysconfdir@/ldms/sampler.conf for an example
+LDMSD_PLUGIN_CONFIG_FILE=@sysconfdir@/ldms/sampler.conf
 
 
 # These are configured by configure script, no need to change.
