--- a/ldms/etc/ldmsd.aggregator.env.in
+++ b/ldms/etc/ldmsd.aggregator.env.in
@@ -28,7 +28,7 @@ LDMSD_AUTH_OPTION="-A conf=@sysconfdir@/ldms/ldmsauth.conf"
 # LDMSD_LOG_OPTION="-l /var/log/ldmsd.log"
 
 # LDMS plugin configuration file, see @sysconfdir@/ldms/ldmsplugin.aggregator.conf for an example
-LDMSD_PLUGIN_CONFIG_FILE=@sysconfdir@/ldms/ldmsplugin.aggregator.conf
+LDMSD_PLUGIN_CONFIG_FILE=@sysconfdir@/ldms/aggregator.conf
 
 
 # These are configured by configure script, no need to change.
