--- a/ldms/etc/ldmsd.sampler.env.cray_xc.example
+++ b/ldms/etc/ldmsd.sampler.env.cray_xc.example
@@ -20,8 +20,8 @@ LDMSD_AUTH_PLUGIN=ovis
 # Authentication options
 LDMSD_AUTH_OPTION="-A conf=/opt/ovis/etc/ldms/ldmsauth.conf"
 
-# LDMS plugin configuration file, see /opt/ovis/etc/ldms/ldmsplugin.sampler.conf for an example
-LDMSD_PLUGIN_CONFIG_FILE=/opt/ovis/etc/ldms/ldmsplugin.sampler.conf
+# LDMS plugin configuration file, see /opt/ovis/etc/ldms/sampler.conf for an example
+LDMSD_PLUGIN_CONFIG_FILE=/opt/ovis/etc/ldms/sampler.conf
 
 
 # These are configured by configure script, no need to change.
