Add a Kokkos systemctl service.

--- a/ldms/etc/systemd/Makefile.am
+++ b/ldms/etc/systemd/Makefile.am
@@ -3,13 +3,15 @@ SYSTEMD_DIR = $(DESTDIR)$(sysconfdir)/systemd/system
 do_subst = @LDMS_SUBST_RULE@
 
 SVC_FILES = $(builddir)/ldmsd.sampler.service \
-	    $(builddir)/ldmsd.aggregator.service
+	    $(builddir)/ldmsd.aggregator.service \
+	    $(builddir)/ldmsd.kokkos.service
 
 $(builddir)/%.service: $(srcdir)/%.service.in
 	$(do_subst) < $< > $@
 
 EXTRA_DIST = ldmsd.aggregator.service.in \
-	     ldmsd.sampler.service.in
+	     ldmsd.sampler.service.in \
+	     ldmsd.kokkos.service.in
 
 install-data-local: $(SVC_FILES)
 	$(MKDIR_P) $(SYSTEMD_DIR)
@@ -18,3 +20,4 @@ install-data-local: $(SVC_FILES)
 uninstall-local:
 	rm -f $(SYSTEMD_DIR)/ldmsd.sampler.service
 	rm -f $(SYSTEMD_DIR)/ldmsd.aggregator.service
+	rm -f $(SYSTEMD_DIR)/ldmsd.kokkos.service
