--- a/ldms/etc/Makefile.am
+++ b/ldms/etc/Makefile.am
@@ -16,6 +16,7 @@ do_subst = @LDMS_SUBST_RULE@
 
 EXTRA_DIST = ldmsauth.conf \
 	     sampler.conf \
+	     kokkos.conf \
 	     sampler.conf.cray_xc.example \
 	     aggregator.conf \
 	     aggregator.conf.cray_xc.example \
@@ -23,11 +24,13 @@ EXTRA_DIST = ldmsauth.conf \
 	     ldmsd.aggregator.env.cray_xc.example \
 	     ldmsd.sampler.env.in \
 	     ldmsd.sampler.env.cray_xc.example \
+	     ldmsd.kokkos.env.in \
 	     ldms.plugstack.env.in \
 	     ldms.cfg
 
 ENV_FILES = $(builddir)/ldmsd.sampler.env \
 	    $(builddir)/ldmsd.aggregator.env \
+	    $(builddir)/ldmsd.kokkos.env \
 	    $(builddir)/ldms.plugstack.env
 
 EXAMPLE_FILES = $(srcdir)/aggregator.conf.cray_xc.example \
@@ -48,14 +51,17 @@ install-data-local: $(ENV_FILES)
 	$(INSTALL_DATA) $(srcdir)/ldms.cfg $(CONF_DIR)
 	$(INSTALL_DATA) $(srcdir)/sampler.conf $(CONF_DIR)
 	$(INSTALL_DATA) $(srcdir)/aggregator.conf $(CONF_DIR)
+	$(INSTALL_DATA) $(srcdir)/kokkos.conf $(CONF_DIR)
 	$(INSTALL_DATA) $(EXAMPLE_FILES) $(CONF_DIR)/
 
 uninstall-local:
 	rm -f $(CONF_DIR)/ldmsd.aggregator.env
 	rm -f $(CONF_DIR)/ldmsd.sampler.env
+	rm -f $(CONF_DIR)/ldmsd.kokkos.env
 	rm -f $(CONF_DIR)/ldmsauth.conf
 	rm -f $(CONF_DIR)/sampler.conf
 	rm -f $(CONF_DIR)/aggregator.conf
+	rm -f $(CONF_DIR)/kokkos.conf
 	rm -f $(CONF_DIR)/ldms.cfg
 	rm -f $(CONF_DIR)/ldms.plugstack.env
 	rm -f $(CONF_DIR)/aggregator.conf.cray_xc.example
