ldmsd,test: add ovis_lib LIBDIR to AM_LDFLAGS in the Makefile.am to build LDMS test programs

--- a/ldms/src/test/Makefile.am
+++ b/ldms/src/test/Makefile.am
@@ -4,6 +4,7 @@ CORE = ../core
 sbin_PROGRAMS = test_ldms_xprt_reconnect
 
 AM_CFLAGS = -I$(srcdir)/$(CORE) -I.. @OVIS_LIB_INCDIR_FLAG@
+AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
 
 sbin_PROGRAMS += test_ldms_xprt_reconnect
 test_ldms_xprt_reconnect_SOURCES = test_ldms_xprt_reconnect.c
