ldmsd_failover (big) fix
- failover based on ping-echo instead of heartbeat
- collect ping-echo round-trip statistics to adjust failover timeout
- ldmsd configuration is now failover-aware. When failover is in use,
  `prdcr`, `updtr`, and `strgp` are not allowed to be altered (start,
  stop, or reconfigure).
- config sequence change: the start of `prdcr`, `updtr`, and `strgp` in
  the config file are deferred to be executed later. If `failover_start`
  is present, the failover service will determine when it is safe to
  start our config objects. Otherwise, the config objects will be
  started at the end of the config file.
- document updates
- test case updates

--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -30,7 +30,7 @@ ldmsd_CFLAGS = $(AM_CFLAGS) -rdynamic
 ldmsd_LDADD = $(CORE)/libldms.la
 ldmsd_LDFLAGS = $(AM_LDFLAGS) \
 	-lzap -lmmalloc -lovis_util -lcoll \
-	-lovis_event -lpthread
+	-lovis_event -lpthread -lm
 
 ldmsd_LDFLAGS += -lovis_util -lcoll -ldl -lovis_ctrl
 
