libmap: library for mapping integers from one domain to another

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -6,6 +6,9 @@ endif
 if ENABLE_SWIG
 SUBDIRS += swig
 endif
+if ENABLE_SOS
+SUBDIRS += bin python
+endif
 
 EXTRA_DIST = autogen.sh COPYING SHA.txt TAG.txt pedigree.am
 
