Add traps for configuration errs and fix sed nit.

--- a/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldms-functions.in
+++ b/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldms-functions.in
@@ -99,7 +99,7 @@ check_auth_option () {
 	export LDMS_AUTH_FILE
 }
 
-# check for migration errors v2 -> v3
+# check for migration errors v2 -> v3, etc
 check_genders_file() {
 	consolidated="ldmsaggd_dbg:ldmsd_dbg ldmsaggd_port:ldmsd_port ldmsaggd_xprt:ldmsd_xprt ldmsaggd_host:ldmsd_host ldmsaggd_num_procs:ldmsd_event_thds"
 	# do not rename these.
@@ -148,13 +148,22 @@ check_genders_file() {
 	done
 	x=`$NODEATTR $NODEATTRFILE -n -A |grep ^ldmsd`
 	y=`$NODEATTR $NODEATTRFILE -n -A |grep ^ldmsaggd`
+	z=`$NODEATTR $NODEATTRFILE -n -A |grep ^${LDMS_HOSTNAME}$`
 	if test -n "$x" -o -n "$y"; then
 		logger -p syslog.err "Found ldms genders without hostnames: $x $y."
+		((n++))
+	fi
+	if test -z "$z"; then
+		logger -p syslog.err "Found no genders at all for $LDMS_HOSTNAME."
+		logger -p syslog.err "Review $NODEATTRFILE or setting of LDMS_HOSTNAME"
+		logger -p syslog.err "Input created from $LDMS_GENDERS_INPUT"
+		exit 1
 		((n++))
 	fi
 	if test $n -gt 0; then
 		logger -p syslog.err "Gender file problems: $n ($v). These genders need to be removed, replaced, correctly spelled, or punctuated as noted."
 		logger -p syslog.err "Review $NODEATTRFILE"
+		logger -p syslog.err "Input created from $LDMS_GENDERS_INPUT"
 		exit 1
 	fi
 }
@@ -225,6 +234,8 @@ build_genders_file () {
 		echoq Unable to create $ALLGENDERS. Check filesystem.
 		dietrace 1
 	fi
+	LDMS_GENDERS_INPUT=`echo $LDMS_GENDERS | tr " " ,`
+	export LDMS_GENDERS_INPUT
 	LDMS_GENDERS=$ALLGENDERS
 	export LDMS_GENDERS
 	echoq LDMS_GENDERS=$LDMS_GENDERS
@@ -482,7 +493,9 @@ start_ldmsd_plugins () {
 		schema=""
 		if test -n "$extraconfig"; then
 			conf="v2"
-			schema=`echo $extraconfig|sed -e 's/.*schema//g' -e  's/ .*//g' -e 's/^=//'`
+			if echo "$extraconfig" |grep schema=; then
+				schema=`echo $extraconfig|sed -e 's/.*schema=//g' -e  's/ .*//g'`
+			fi > /dev/null
 			if test -n "$schema"; then
 				instance=${producer}/$schema
 			else
